Fixes coloring and spacings such that the output looks good on Chrome, issue #475

--- a/gcovr/templates/style.details.css
+++ b/gcovr/templates/style.details.css
@@ -2,6 +2,7 @@ td.CoverValue
 {
     text-align: right;
     white-space: nowrap;
+    padding: 2px 10px !important;
 }
 
 td.coveredLine,
