--- a/gcovr/templates/style.meter.css
+++ b/gcovr/templates/style.meter.css
@@ -1,20 +1,19 @@
 /*** Meter formats ***/
 
 /* Common */
+span,
 meter {
     -moz-appearance: none;
     -webkit-appearance: none;
 
-    width: 30vw;
-    min-width: 4em;
-    max-width: 15em;
-    height: 12px;
-    padding: 0;
+    height: 15px;
+    padding-right: 4px;
     vertical-align: baseline;
     margin-top: 3px;
     /* Outer background for Mozilla */
     background: none;
     background-color: whitesmoke;
+    font-size: .7em;
 }
 
 /* Webkit */
